<resources>
    <string name="app_name">Kandy Cpass 2.0</string>
    <string name="enter_user_name">User name</string>
    <string name="enter_user_password">User password</string>
    <string name="enter_user_client">User client</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading data...</string>
    <string name="enter_url">Base url</string>
    <string name="groups">Groups</string>
    <string name="status">Status</string>
    <string name="enter_message">Enter message</string>
    <string name="availability">Availability</string>
    <string name="foreground_call_service_content_text">Call</string>
    <string name="common_message_permission_all_required">Storage permission needed. Please allow in App Settings for login.</string>

    <string-array name="presence_availability">
        <item>Open</item>
        <item>Closed</item>
    </string-array>

    <string name="enter_private_project_key">Enter Private Project key</string>
    <string name="enter_private_project_secret">Enter Private Project secret</string>

</resources>
