<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/update_presence_status_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/status" />

        <Spinner
            android:id="@+id/presence_status_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <EditText
        android:id="@+id/other_status_message"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:hint="@string/enter_message"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/availability" />

        <Spinner
            android:id="@+id/presence_availability_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>