<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout

            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/enter_url" />


            <EditText
                android:id="@+id/et_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="nvs-cpaas-oauth.kandy.io"
                android:text="oauth-cpaas.att.com" />

            <RadioGroup
                android:id="@+id/rg_login_type_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/rb_password_grant"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_password_grant"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Password Grant"></RadioButton>
                <RadioButton
                    android:id="@+id/rb_client_credentials"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Client Credentials"></RadioButton>

            </RadioGroup>

            <LinearLayout
                android:id="@+id/ll_password_grant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/enter_user_name" />



                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="abcd@xyz.com"/>

                <TextView
                    android:id="@+id/tv_user_password"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_user_password" />
                <EditText
                    android:id="@+id/et_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="Test@123" />
                <TextView
                    android:id="@+id/tv_user_client"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_user_client"/>
                <EditText
                    android:id="@+id/et_user_client"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="PUB-test123" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_client_credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_client_id"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_private_project_key"/>
                <EditText
                    android:id="@+id/et_client_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="PRIV-nesonukuv.34mv.nesopro1" />

                <TextView
                    android:id="@+id/tv_client_secret"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_private_project_secret" />
                <EditText
                    android:id="@+id/et_client_secret"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />


            </LinearLayout>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorPrimary"
                android:padding="16dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="14sp" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>